# AgriPartnerAI

./: .gitignore  CLAUDE.md  setup-github-actions.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy-functions.yml  deploy-infrastructure.yml  deploy-mobile.yml  test-backend.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.ja.md  README.md  main.py  pyproject.toml  ruff.toml
backend/examples/: audio_upload_example.py  simple_upload_example.py
backend/functions/: main.py  main_complex.py  pyproject.toml  requirements.txt
backend/src/api/: main.py  upload.py
backend/src/gcs/: client.py  models.py
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/actions/: page.tsx
frontend/app/drone-ops/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/visit-recorder/: page.tsx
frontend/components/: Footer.tsx  Header.tsx  MainLayout.tsx  SideNav.tsx
infra/: .gitignore  README.md
infra/terraform/: artifact_registry.tf  cloud_functions.tf  cloud_functions.tf.disabled  cloud_run.tf  gcs.tf  github_actions.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf  vertex_ai.tf
mobile/: .firebaserc  .gitignore  MLX_SETUP_INSTRUCTIONS.md  README.md  firebase.json  pubspec.yaml
mobile/.firebase/: hosting.YnVpbGQvd2Vi.cache
mobile/ios/: GemmaCoreMLHandler.swift  Podfile  add_coreml_models.sh  test_models.sh
mobile/lib/: main.dart
mobile/test/: widget_test.dart
(+59 files in other folders)
