[project]
name = "agripartner-ai"
version = "0.1.0"
description = "Pipeline for retrieving audio/images from GCS and processing with LLMs"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-storage>=2.10.0",
    "google-cloud-aiplatform>=1.38.0",
    "pillow>=10.1.0",
    "pydub>=0.25.1",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]